fix: reamaze button visibility in cart on mobile

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -951,6 +951,6 @@ section.product-list-slider button.slick-arrow.slick-next {
   @apply !px-0;
 }
 
-.page-custom-bundle ~ #reamazejs-container {
+.page-custom-bundle ~ #reamazejs-container #reamaze-widget {
   @apply sm:!visible !invisible;
 }
